syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";

message subscriber {
    string Imsi = 1 [(validator.field) = { string_not_empty: true,  length_gt: 5, length_lt: 16 }, json_name="imsi"];
    string Iccid = 2 [(validator.field) = {string_not_empty: true,  length_gt: 5, length_lt: 16}, json_name="iccid"];
    string Network = 3[(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="network"];
    string Package = 4[(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="package"];
    string Org = 5[(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="org"];
    string Policy = 6 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name="policy"];
}

message AsrActivated {
    subscriber Subscriber = 1;
}

message AsrInactivated{
    subscriber Subscriber = 1;
}

message AsrUpdated {
    subscriber Subscriber = 1; 
}